--- a/ws_test.html
+++ b/ws_test.html
@@ -54,7 +54,7 @@
 	{
 		var obj = {type: 'decrease', anon:anon};
 		var json = JSON.stringify(obj);
-		socket.send(obj);
+		socket.send(json);
 	}
 			
 
