--- a/ws_test.html
+++ b/ws_test.html
@@ -9,7 +9,7 @@
 	</head>
 </html>
 
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 <script>
 	var socket;
