--- a/ws_test.html
+++ b/ws_test.html
@@ -21,7 +21,7 @@
 
 		socket.onopen = function()
 		{
-			$('#sys_message').text("Connected");
+			document.getElementById('sys_message').text("Connected");
 		}
 		
 		socket.onmessage = function(message)
@@ -31,7 +31,7 @@
 			switch(json.type)
 			{
 				case 'show':
-					$('#sys_message').text(json.mess);
+					document.getElementById('sys_message').text(json.mess);
 					break;
 			}
 		};
@@ -40,7 +40,7 @@
 	function Disconnect()
 	{
 		socket.close();
-		$('#sys_message').text("Disconnected");
+		document.getElementById('sys_message').text("Disconnected");
 	}
 	
 	function Increase(anon)
