--- a/ws_test.html
+++ b/ws_test.html
@@ -33,7 +33,7 @@
 					break;
 
 				case 'saved':
-					document.getElementById('sys_message').innerText=json.stat;
+					document.getElementById('sys_message').innerText=json.mess;
 					break;
 			}
 		};
