--- a/test_site.html
+++ b/test_site.html
@@ -5,7 +5,7 @@
     {
         var xhr = new XMLHttpRequest();
 
-        var body = 'login=' + document.getElementById("login").value +
+        var body = 'login=' + document.getElementById("register").value +
         '&pass=' + document.getElementById("pass").value + 
         '&type=login';
         document.getElementById("test1").text = body;
